added the script file

--- a/index.html
+++ b/index.html
@@ -63,5 +63,7 @@
       Coded by <a href="https://github.com/tonnysei" target="_blank">Seif Telmini</a>.
     </div>
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
