added alt to img

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="btn-container">
         <button class="calculate-btn">
-          <img class="btn-logo" src="assets/images/icon-arrow.svg">
+          <img class="btn-logo" src="assets/images/icon-arrow.svg" alt="calculate btn">
         </button>
       </div>
 
